# urbit

./: .README.md.~undo-tree~  .bazelrc  .clang-format  .envrc  .eslintrc.js  .gitattributes  .gitignore  .gitmodules  .ignore  .indent.swp  .mailmap  .stylish-haskell.yaml  .travis.yml  .vercelignore  ARCH.md  BIP158.md  BTC.scratch.md  BUILD.bazel  CONTRIBUTING.md  COPYING  DEMO.md  LIBUV-v1.7.5.md  LICENSE  LICENSE.msys2  LICENSE.txt  MAINTAINERS.md  MOON_INSTALL.md  Makefile  PATCH.md  PROVIDER.md  PSBT.md  README.markdown  README.md  TEST.md  UTXO-select.md  WALLET.scratch.md  WORKSPACE  bippy-scratch.md  build.sh  builder_setup.sh  (+71 more)
common/: common.cabal
common/src/Urbit/: Atom.hs
common/src/Urbit/Atom/: Internal.hs
common/src/Urbit/Moon/: LambdaToUruk.hs  MoonToUruk.hs  Repl.hs
common/src/Urbit/Uruk/: Class.hs  DashParser.hs  Fast.hs
frontend/: frontend.cabal
frontend/src/: Frontend.hs
frontend/src-bin/: main.hs
include/ent/: detail.h  ent.h  meson.build
outside/cre2/src/: .gitignore  COPYING  Makefile.am  autogen.sh  build.sh  clean.sh  configure.ac  configure.sh  prepare.sh
outside/cre2/src/doc/: cre2.texi  fdl-1.3.texi
outside/cre2/src/src/: cre2.cpp  cre2.h
outside/cre2/src/tests/: test-consume-match.c  test-easy-matching.c  test-find-and-consume-match.c  test-full-match.c  test-matching.c  test-misc.c  test-options.c  test-partial-match.c  test-replace.c  test-rex-alloc.c  test-version.c
pkg/ent/: .gitignore  BUILD.bazel  LICENSE  README.md  configure  default.nix  ent.c  ent.h  shell.nix  test.c
pkg/hs/terminal-progress-bar/: shell.nix  terminal-progress-bar.cabal
pkg/hs/terminal-progress-bar/bench/: bench.hs
pkg/hs/terminal-progress-bar/test/: test.hs
pkg/hs/urbit-integer-simple/: LICENSE  Setup.hs  urbit-integer-simple.cabal
pkg/hs/urbit-integer-simple/Urbit/: Integer.hs
pkg/lmdb-static/: lmdb-static.cabal
pkg/ob/uruk-demo/backend/: backend.cabal
pkg/ob/uruk-demo/frontend/: frontend.cabal
pkg/urbit/: .astylerc  .gitattributes  .gitignore  .travis.yml  BUILD.bazel  Doxyfile  LICENSE.txt  Makefile  build-mingw  bytecode-log.txt  configure  default.nix  gdb-test-hash  hashtable_tests  shell.nix  urbit  urbit-worker  vere-cache-clearing  version
pkg/urbit/.travis/: get-brass-pill.sh  package-lock.json  package.json
pkg/urbit/bench/: ur_bench.c
pkg/urbit/c/: bile.c  defs.c  list.c  path.c  prim.c  queue.c
pkg/urbit/compat/: create-include-files.sh  poor-mans-nix-shell.sh
pkg/urbit/compat/m1brew/: compat.mk  ed25519.patch  ent.patch  libscrypt.patch  softfloat3.patch  use-static-libs.sh
pkg/urbit/compat/mingw/: argon2u.patch  compat.c  compat.h  compat.mk  ctrlc.c  daemon.c  h2o.patch  lmdb.patch  mman.h  poor-mans-nix-shell.sh  ptty.c  rsignal.c  rsignal.h  seh_handler.c  seh_handler_decorator.cc  seh_handler_decorator.mk  setjmp.h  softfloat3.patch  termios.h  uv.patch
pkg/urbit/compat/openbsd/: ent.patch  lmdb.patch  murmur3.patch  softfloat3.patch
pkg/urbit/compat/posix/: daemon.c  ptty.c  rsignal.h
pkg/urbit/daemon/: main.c  whereami.c  whereami.h
pkg/urbit/include/: all.h  config.h.in
pkg/urbit/include/c/: all.h  bile.h  defs.h  list.h  motes.h  path.h  portable.h  prim.h  queue.h  types.h
pkg/urbit/include/jets/: g.h  k.h  l.h  q.h  w.h  y.h
pkg/urbit/include/noun/: aliases.h  all.h  allocate.h  defs.h  events.h  hashtable.h  imprison.h  jets.h  log.h  manage.h  nock.h  urth.h  (+8 more)
pkg/urbit/jets/: tree.c
pkg/urbit/king/: main.c
pkg/urbit/noun/: allocate.c  events.c  hashtable.c  imprison.c  jets.c  log.c  manage.c  nock.c  retrieve.c  serial.c  trace.c  urth.c  vortex.c  xtract.c  zave.c
pkg/urbit/pagfal/: pagfal_linux.c
pkg/urbit/serf/: main.c
pkg/urbit/tests/: ames_tests.c  bile_tests.c  boot_tests.c  epoc_tests.c  events_tests.c  hashtable_tests.c  jam_tests.c  jet_tests.c  list_tests.c  meme_tests.c  mug_tests.c  newt_tests.c  nock_tests.c  noun_tests.c  path_tests.c  prim_tests.c  queue_tests.c  test.c  test_lmdb.c  unix_tests.c  ur_tests.c
pkg/urbit/ur/: bitstream.c  hashcons.c  ivory.c  serial.c
pkg/urbit/vere/: ames.c  auto.c  behn.c  cttp.c  daemon.c  dawn.c  disk.c  epoc.c  event_log.c  evlo.c  foil.c  fore.c  hind.c  http.c  ivory.c  king.c  lmdb.c  lock.c  lord.c  newt.c  ovum.c  pier.c  reck.c  root.c  saga.c  save.c  snapshot.c  term.c  time.c  unix.c  walk.c  ward.c
pkg/urbit/worker/: main.c  mars.c  serf.c
pkg/urcrypt/: .gitignore  BUILD.bazel  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac  liburcrypt.pc.in  shell.nix  urcrypt.c  urcrypt.h
pkg/urcrypt/argon2/: BUILD.bazel  README.md  meson.build
pkg/urcrypt/autom4te.cache/: output.1  output.3  requests  traces.0  traces.1  traces.2
pkg/urcrypt/build-aux/: ltmain.sh
pkg/urcrypt/ed25519/: BUILD.bazel  test.c
pkg/urcrypt/ge-additions/: BUILD.bazel  README.md  ge-additions.c  ge-additions.h
pkg/urcrypt/keccak-tiny/: .clang-format  .gitignore  BUILD.bazel  define-macros.h  do.sh  keccak-tiny-unrolled.c  keccak-tiny.c  keccak-tiny.h  keccak-tiny.pri  simple_do.sh
pkg/urcrypt/scrypt/: BUILD.bazel  Makefile  README.md  b64.c  b64.h  crypto-mcf.c  crypto-scrypt-saltgen.c  crypto_scrypt-check.c  crypto_scrypt-hash.c  crypto_scrypt-hexconvert.c  crypto_scrypt-hexconvert.h  crypto_scrypt-nosse.c  libscrypt.h  main.c  sha256.c  sha256.h  slowequals.c  slowequals.h  sysendian.h
pkg/urcrypt/urcrypt/: BUILD.bazel  aes_cbc.c  aes_ecb.c  aes_siv.c  argon.c  ed25519.c  ge_additions.c  keccak.c  pedersen.c  ripemd.c  scrypt.c  secp256k1.c  sha.c  urcrypt.h  util.c  util.h
src/: add_scalar.c  base_precomp_data.h  config.h.in  consttime_cmp.c  ed25519.h  ent.c  fe.c  fe.h  fe_0.c  fe_add.c  fe_copy.c  fe_frombytes.c  fe_mul.c  fe_neg.c  fe_pow22523.c  fe_sq.c  fe_sq2.c  fe_sub.c  fe_tobytes.c  fixedint.h  ge.c  ge.h  ge_add.c  ge_double_scalarmult.c  ge_frombytes.c  ge_madd.c  ge_msub.c  ge_p1p1_to_p2.c  ge_p1p1_to_p3.c  ge_p2_0.c  ge_p2_dbl.c  ge_p3_0.c  ge_p3_dbl.c  ge_p3_to_cached.c  ge_p3_to_p2.c  ge_p3_tobytes.c  ge_precomp_0.c  ge_scalarmult_base.c  ge_sub.c  ge_tobytes.c  (+15 more)
(+14244 files in other folders)
