option('gc', type : 'boolean', value : false,
  description : 'Add debugging information to heap. Run with -g. Breaks image.')
option('prof', type : 'boolean', value : false,
  description : 'Activate profiling. Run with -P.')
option('nix', type: 'boolean', value: false,
  description: 'Build using nix.')
