option('gc', type : 'boolean', value : false,
  description : 'Add debugging information to heap. Run with -g. Breaks image.')
option('prof', type : 'boolean', value : false,
  description : 'Activate profiling. Run with -P.')
option('event-time', type : 'boolean', value : false,
  description : 'Print timing information per event.')
option('memory-log', type : 'boolean', value : false,
  description : 'Write memory usage to a logfile.')
option('nix', type: 'boolean', value: false,
  description: 'Build using nix.')
