load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "ent",
    srcs = ["ent.c"],
    hdrs = ["ent.h"],
    includes = ["."],
    # FIXME: use configure or select() here.
    local_defines = [
        "ENT_DEV_URANDOM",
    ],
    visibility = ["//visibility:public"],
)

# ENT_GETENTROPY_UNISTD \
# ENT_GETENTROPY_SYSRANDOM \
# ENT_GETRANDOM_SYSCALL \
# ENT_GETENTROPY_BCRYPTGENRANDOM \
# ENT_DEV_URANDOM
